test-output/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-project
  labels:
    project: test-project
