test-output/infrastructure/network-policy-allow-otel-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-project-allow-otel-collector
  namespace: test-project
spec:
  podSelector:
    matchLabels:
      common.k8s.elastic.co/type: elasticsearch
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: observability
    ports:
    - protocol: TCP
      port: 9200
